# obsidian-agent

./: .gitignore  DATA.md  Makefile  README.md  build_hf_dataset.py  evaluate.py  generate_data.py  generate_kb.py  main.py  openrouter.py  pyproject.toml  requirements.txt  retrieval_rl.md  run_agent.py  run_retrieval.sh  run_vf_ret.py  test_memory_rollouts.py  test_reward.py  test_vllm_structured_outputs.py  train_memory_agent.py
agent/: __init__.py  agent.py  engine.py  model.py  pyproject.toml  schemas.py  settings.py  system_prompt.txt  system_prompt_alt.txt  tools.py  utils.py
agent/async_agent/: README.md  __init__.py  async_agent.py  async_engine.py  async_model.py  async_tools.py
data/: DATA.md  Makefile  README.md  main.py  model.py  pyproject.toml  requirements.txt  settings.py  utils.py
data/pipeline/: __init__.py  generate_introduce_sft.py  generate_kb.py  generate_multiturn.py  generate_personas.py  generate_relationships.py  generate_sft.py  generate_stories.py  generate_update_sft.py  utils.py
data/pipeline/sft/: __init__.py  base.py  generate_introduce_sft.py  generate_retrieve_sft.py  generate_update_sft.py
data/pipeline/steps/: generate_stories.py
data/schemas/: base.py  convo.py  kb.py  personas.py  qa.py  sft.py  stories.py
datagen/: model.py  settings.py
datagen/pipeline/: __init_.py  generate_companies.py  generate_customers.py  generate_user_stories.py
datagen/schemas/: company.py  customer.py  stories.py
kg/: configs.py  diff.py  generate_graph.py  generate_md.py  generate_qa.py  generate_update.py  llm.py  run.py  samp.json  sample.json  sketch.py
logs/: README.md
output/datasets/: base_dataset.json  skrl_dataset.json  verifiers_dataset.json
scripts/: run_verifiers_training.sh
training/: __init__.py  pyproject.toml  settings.py  utils.py
training/configs/rl/: deepspeed_zero3.json  zero3.yaml
training/configs/sft/: sft_config.yaml
training/data/: convos.json
training/obsidian/: utils.py
training/retrieval/: __init__.py  dataset.py  env.py  env_entrypoint.py  format_dataset.py  main_retrieval.py  memory_env.py  memory_rubric.py  new_env.py  register_env.py  rubric.py  train_ret.py  train_retrieval.py
training/reward/: __init__.py  folder_dump.py  judge_prompt.txt  metrics.py  model.py  reward.py  schemas.py  utils.py
training/reward/prompts/: reply_judge_prompt.txt
training/scripts/: run_verifiers_training.sh
training/vf/: env.py  rubric.py
verifiers/: __init__.py  pyproject.toml  train_memory_agent.py
xml_agent/: agent.py  engine.py  model.py  settings.py  system_prompt.txt  tools.py  utils.py
(+26 files in other folders)
